--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,71 +1,71 @@
-name: CI/CD
+name: CI/CD - Build, Testes e Deploy
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main
     paths-ignore:
-      - '**.md'
-  pull_request:
-    branches: ["main"]
-    paths-ignore:
-      - '**.md'
+      - '**/*.md'
 
 jobs:
   build-test:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout do código
+        uses: actions/checkout@v4
 
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
 
-      - name: Install deps
+      - name: Instalar dependências
         run: |
           pip install -r requirements.txt \
-                      ruff pylint mypy bandit pip-audit black
-    
-        # --- Estilo / qualidade ---
-      - name: Ruff (PEP‑8 + imports)
+                      ruff pylint mypy bandit pip-audit black pytest
+
+      - name: Lint com Ruff
         run: ruff app
 
-      - name: Pylint
+      - name: Análise de código com Pylint
         run: pylint app
 
-        # --- Tipagem ---
-      - name: mypy
+      - name: Verificação de tipagem com mypy
         run: mypy app
 
-        # --- Segurança ---
-      - name: Bandit
+      - name: Análise de segurança com Bandit
         run: bandit -r app
 
-      - name: pip‑audit
+      - name: Auditoria de dependências com pip-audit
         run: pip-audit
 
-        # --- Formatação (fail on diff) ---
-      - name: Black check
+      - name: Verificação de formatação com Black
         run: black --check app
 
-      - name: Lint
-        run: ruff app
-
-      - name: Unit tests
+      - name: Executar testes unitários
         run: pytest -q
-
-      - name: Build & Push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/ci-cd-demo:${{ github.sha }}
 
   deploy:
     needs: build-test
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
+
     steps:
-      - name: Deploy placeholder
-        run: echo "Deploy via SSH or ECS script aqui"
+      - name: Deploy via SSH na VM
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.VM_IP }}
+          username: ${{ secrets.VM_USER }}
+          key: ${{ secrets.VM_KEY }}
+          script: |
+            cd ~/CI-CD-tutorial-completo
+            git pull origin main
+            docker compose down
+            docker compose up -d
+      
+      - name: Security Scan com OWASP ZAP
+        uses: zaproxy/action-baseline@v0.10.0
+        with:
+          target: 'http://${{ secrets.VM_IP }}:8000'
+          fail_action: false
