--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,6 +25,9 @@ jobs:
           pip install -r requirements.txt \
                       ruff pylint mypy bandit pip-audit black pytest
 
+      - name: Verificação de formatação com Black
+        run: black --color app
+
       - name: Lint com Ruff
         run: ruff app
 
@@ -39,9 +42,6 @@ jobs:
 
       - name: Auditoria de dependências com pip-audit
         run: pip-audit
-
-      - name: Verificação de formatação com Black
-        run: black --check app
 
       - name: Executar testes unitários
         run: pytest -q
