--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,7 +29,7 @@ jobs:
         run: black --color ./app
 
       - name: Lint com Ruff
-        run: ruff ./app
+        run: ruff check ./app
 
       - name: Análise de código com Pylint
         run: pylint app
