--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,6 +45,8 @@ jobs:
 
       - name: Executar testes unitários
         run: pytest -q
+        env:
+          PYTHONPATH: ./app
 
   deploy:
     needs: build-test
