--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Executar testes unitários
         run: pytest -q
         env:
-          PYTHONPATH: .
+          PYTHONPATH: ./
 
   deploy:
     needs: build-test
