fix: add token parameter to OWASP ZAP - Github PAT - repo

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -71,3 +71,4 @@ jobs:
         with:
           target: 'http://${{ secrets.VM_IP }}:8000'
           fail_action: false
+          token: ${{ secrets.ZAP_TOKEN }}
