--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   build-test:
     runs-on: ubuntu-latest
+    env: # Adicionado env global para o job
+      PYTHONPATH: .
 
     steps:
       - name: Checkout do código
@@ -23,7 +25,7 @@ jobs:
       - name: Instalar dependências
         run: |
           pip install -r requirements.txt \
-                      ruff pylint mypy bandit pip-audit black pytest
+                      ruff pylint mypy bandit pip-audit black pytest pydantic[email] # Adicionado pydantic[email]
 
       - name: Verificação de formatação com Black
         run: black --color ./app
@@ -45,8 +47,6 @@ jobs:
 
       - name: Executar testes unitários
         run: pytest -q
-        env:
-          PYTHONPATH: ./
 
   deploy:
     needs: build-test
@@ -72,4 +72,4 @@ jobs:
           target: 'http://${{ secrets.VM_IP }}:8000'
           fail_action: false
           token: ${{ secrets.ZAP_TOKEN }}
-          artifact_name: zap_scan_report
+          artifact_name: zap-scan-report # Renomeado o artifact_name
