fix: rename artifact_name in OWASP ZAP security scan step

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -72,4 +72,4 @@ jobs:
           target: 'http://${{ secrets.VM_IP }}:8000'
           fail_action: false
           token: ${{ secrets.ZAP_TOKEN }}
-          artifact_name: zap-scan-report # Renomeado o artifact_name
+          artifact_name: zapscanreport # Renomeado o artifact_name
