--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,8 +10,6 @@ on:
 jobs:
   build-test:
     runs-on: ubuntu-latest
-    env: # Adicionado env global para o job
-      PYTHONPATH: .
 
     steps:
       - name: Checkout do código
@@ -25,7 +23,7 @@ jobs:
       - name: Instalar dependências
         run: |
           pip install -r requirements.txt \
-                      ruff pylint mypy bandit pip-audit black pytest pydantic[email] # Adicionado pydantic[email]
+                      ruff pylint mypy bandit pip-audit black pytest
 
       - name: Verificação de formatação com Black
         run: black --color ./app
@@ -47,6 +45,8 @@ jobs:
 
       - name: Executar testes unitários
         run: pytest -q
+        env:
+          PYTHONPATH: ./
 
   deploy:
     needs: build-test
@@ -67,9 +67,9 @@ jobs:
             docker compose up -d
       
       - name: Security Scan com OWASP ZAP
-        uses: zaproxy/action-baseline@v0.10.0
+        uses: zaproxy/action-baseline@v0.14.0
         with:
           target: 'http://${{ secrets.VM_IP }}:8000'
           fail_action: false
           token: ${{ secrets.ZAP_TOKEN }}
-          artifact_name: zapscanreport # Renomeado o artifact_name
+          artifact_name: zapscanreport
